// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`orders getOrder returns an array of orders when the response is valid 1`] = `
Array [
  Array [
    Object {
      "AmazonOrderId": "902-3159896-1390916",
      "EarliestShipDate": 2017-01-20T19:51:16.000Z,
      "FulfillmentChannel": "MFN",
      "IsBusinessOrder": false,
      "IsGlobalExpressEnabled": false,
      "IsPremiumOrder": false,
      "IsPrime": false,
      "LastUpdateDate": 2017-01-20T19:49:35.000Z,
      "LatestShipDate": 2017-01-25T19:49:35.000Z,
      "MarketplaceId": "ATVPDKIKX0DER",
      "NumberOfItemsShipped": 0,
      "NumberOfItemsUnshipped": 0,
      "OrderStatus": "Pending",
      "OrderType": "StandardOrder",
      "PaymentMethod": "Other",
      "PaymentMethodDetails": Array [
        "CreditCard",
        "GiftCerificate",
      ],
      "PurchaseDate": 2017-01-20T19:49:35.000Z,
      "ShipmentServiceLevelCategory": "Standard",
    },
  ],
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`orders getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`orders listOrderItems returns an array of order items when the response is valid 1`] = `
Array [
  Object {
    "AmazonOrderId": "058-1233752-8214740",
    "NextToken": "Token!",
    "OrderItems": Array [
      Object {
        "ASIN": "BT0093TELA",
        "CODFee": Object {
          "Amount": 10,
          "CurrencyCode": "USD",
        },
        "CODFeeDiscount": Object {
          "Amount": 1,
          "CurrencyCode": "USD",
        },
        "GiftMessageText": "For you!",
        "GiftWrapLevel": "Classic",
        "GiftWrapPrice": Object {
          "Amount": 1.99,
          "CurrencyCode": "USD",
        },
        "ItemPrice": Object {
          "Amount": 25.99,
          "CurrencyCode": "USD",
        },
        "OrderItemId": "68828574383266",
        "QuantityOrdered": 1,
        "SellerSKU": "CBA_OTF_1",
        "ShippingPrice": Object {
          "Amount": 1.26,
          "CurrencyCode": "USD",
        },
        "Title": "Example item name",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`orders listOrderItemsByNextToken returns an array of order items when the response is valid 1`] = `
Array [
  Object {
    "AmazonOrderId": "058-1233752-8214740",
    "NextToken": "Token!",
    "OrderItems": Array [
      Object {
        "ASIN": "BT0093TELA",
        "CODFee": Object {
          "Amount": 10,
          "CurrencyCode": "USD",
        },
        "CODFeeDiscount": Object {
          "Amount": 1,
          "CurrencyCode": "USD",
        },
        "GiftMessageText": "For you!",
        "GiftWrapLevel": "Classic",
        "GiftWrapPrice": Object {
          "Amount": 1.99,
          "CurrencyCode": "USD",
        },
        "ItemPrice": Object {
          "Amount": 25.99,
          "CurrencyCode": "USD",
        },
        "OrderItemId": "68828574383266",
        "QuantityOrdered": 1,
        "SellerSKU": "CBA_OTF_1",
        "ShippingPrice": Object {
          "Amount": 1.26,
          "CurrencyCode": "USD",
        },
        "Title": "Example item name",
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`orders listOrders returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "LastUpdatedBefore": 2017-02-25T18:10:21.687Z,
    "NextToken": NextToken {
      "action": "ListOrders",
      "token": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
    },
    "Orders": Array [
      Object {
        "AmazonOrderId": "902-3159896-1390916",
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com",
        "BuyerName": "Buyer name",
        "BuyerTaxInfo": Object {
          "CompanyLegalName": "Company Name",
          "TaxClassifications": Object {
            "TaxClassification": Object {
              "Name": "VATNumber",
              "Value": "XXX123",
            },
          },
          "TaxingRegion": "US",
        },
        "EarliestShipDate": 2017-02-20T19:51:16.000Z,
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": true,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "LastUpdateDate": 2017-02-20T19:49:35.000Z,
        "LatestShipDate": 2017-02-25T19:49:35.000Z,
        "MarketplaceId": "ATVPDKIKX0DER",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 25,
          "CurrencyCode": "USD",
        },
        "OrderType": "StandardOrder",
        "PaymentMethod": "Other",
        "PaymentMethodDetails": Array [
          "CreditCard",
        ],
        "PurchaseDate": 2017-02-20T19:49:35.000Z,
        "PurchaseOrderNumber": "PO12345678",
        "SalesChannel": "Amazon.com",
        "ShippingAddress": Object {
          "AddressLine1": "1234 Any St.",
          "AddressType": "Commercial",
          "City": "Seattle",
          "CountryCode": "US",
          "Name": "Buyer name",
          "PostalCode": "98103",
        },
      },
      Object {
        "AmazonOrderId": "483-3488972-0896720",
        "BuyerCounty": "Vila Olimpia",
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com.br",
        "BuyerName": "John Jones",
        "BuyerTaxInfo": Object {
          "TaxClassifications": Object {
            "TaxClassification": Object {
              "Name": "CSTNumber",
              "Value": "XXX123",
            },
          },
          "TaxingRegion": "BR",
        },
        "EarliestShipDate": 2017-02-20T19:51:16.000Z,
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": false,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "LastUpdateDate": 2017-02-20T19:49:35.000Z,
        "LatestShipDate": 2017-02-25T19:49:35.000Z,
        "MarketplaceId": "A2Q3Y263D00KWC",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 100,
          "CurrencyCode": "BRL",
        },
        "PaymentMethod": "Other",
        "PaymentMethodDetails": Array [
          "CreditCard",
        ],
        "PurchaseDate": 2017-02-20T19:49:35.000Z,
        "ShippingAddress": Object {
          "AddressLine1": "1234 Avenida Qualquer",
          "AddressType": "Residential",
          "City": "Sao Paulo",
          "CountryCode": "BR",
          "Name": "Buyer name",
          "PostalCode": "08474-130",
        },
      },
      Object {
        "AmazonOrderId": "058-1233752-8214740",
        "BuyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.co.jp",
        "BuyerName": "Jane Smith",
        "FulfillmentChannel": "MFN",
        "IsBusinessOrder": false,
        "IsEstimatedShipDateSet": true,
        "IsGlobalExpressEnabled": false,
        "IsPremiumOrder": false,
        "IsPrime": false,
        "LastUpdateDate": 2017-02-07T12:43:16.000Z,
        "MarketplaceId": "A1VC38T7YXB528",
        "NumberOfItemsShipped": 0,
        "NumberOfItemsUnshipped": 1,
        "OrderStatus": "Unshipped",
        "OrderTotal": Object {
          "Amount": 1507,
          "CurrencyCode": "JPY",
        },
        "OrderType": "SourcingOnDemandOrder",
        "PaymentExecutionDetail": Array [
          Object {
            "Payment": Object {
              "Amount": 10,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "PointsAccount",
          },
          Object {
            "Payment": Object {
              "Amount": 317,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "GC",
          },
          Object {
            "Payment": Object {
              "Amount": 1180,
              "CurrencyCode": "JPY",
            },
            "PaymentMethod": "COD",
          },
        ],
        "PaymentMethod": "COD",
        "PaymentMethodDetails": Array [
          "COD",
        ],
        "PromiseResponseDueDate": 2017-08-31T23:58:44.000Z,
        "PurchaseDate": 2017-02-05T00:06:07.000Z,
        "ShipServiceLevel": "Std JP Kanto8",
        "ShipmentServiceLevelCategory": "Standard",
        "ShippingAddress": Object {
          "AddressLine1": "1-2-10 Akasaka",
          "City": "Tokyo",
          "CountryCode": "JP",
          "Name": "Jane Smith",
          "PostalCode": "107-0053",
        },
      },
    ],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`orders listOrdersByNextToken returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "LastUpdatedBefore": 2017-02-25T18:10:21.687Z,
    "NextToken": NextToken {
      "action": "ListOrders",
      "token": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
    },
    "Orders": Array [],
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
